@@ -57,7 +57,8 @@ dependencies {
 
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
   implementation 'org.asynchttpclient:async-http-client:2.12.3'
-  implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.0'
+  implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.0' // Use a newer, consistent version
+  implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.0'
   implementation 'com.squareup.okhttp3:okhttp:4.9.3'  // Προσθήκη OkHttp στην εφαρμογή
   implementation 'com.google.code.gson:gson:2.8.8' // Προσθήκη της εξάρτησης Gson
   implementation 'com.squareup.okhttp:okhttp:2.7.5' // Παλιότερη έκδοση
@@ -103,7 +104,12 @@ dependencies {
 }
 
 test {
-  useJUnitPlatform()}
+  useJUnitPlatform()
+  jvmArgs += [
+          '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+          '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+          '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+  ]}
 
 jlink {
   imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
